2006-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/tdo.c: add a new class OCI8::TDO to fetch Oracle's
	    object types.
	* ext/oci8/bind.c, ext/oci8/extconf.rb, ext/oci8/lob.c,
	    ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/stmt.c,
	    lib/oci8/oci8.rb: use OCI8::TDO to fetch Oracle's object
	    types.
	* ext/oci8/lob.c: add oci8_make_clob() and oci8_make_blob()
	    for OCI8::TDO.
	* ext/oci8/metadata.c: export cOCI8MetadataBase for OCI8::TDO.
	* ext/oci8/error.c: prepend error line in C to the exception's
	    backtrace for debug.

2006-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add check code whether oci.h exists.

2006-11-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/ocinumber.c: rename make_oci_number()
	    and make_integer to oci8_make_ocinumber() and oci8_make_integer().
	    add oci8_make_float().
	* ext/oci8/oci8.h, ext/oci8/ocidatetime.c, lib/oci8/oci8.rb: add
	    oci8_make_datetime_from_ocidate(), oci8_make_datetime_from_ocidatetime(),
	    oci8_make_interval_ym() and oci8_make_interval_ds().
	    OCI8::BindType::IntervalYM#get return an OCI8::IntervalYM instead of an array.
	    OCI8::BindType::IntervalDS#get return an OCI8::IntervalDS instead of an array.
	    OCI8::BindType::DateTime#get return a DateTime instead of an array.

2006-11-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: add callbacks for piecewise operations.
	* ext/oci8/oraconf.rb: add an error message for intel mac.
	* ext/oci8/bind.c: add OCI8::BindType::Long and
	    OCI8::BindType::LongRaw.
	* ext/oci8/stmt.c: fix OCI8::Cursor#define, OCI8::Cursor#bind_param,
	    OCI8::Cursor#exec and OCI8::Cursor#fetch for piecewise operations.
	* ext/oci8/lob.c, ext/oci8/oradate.c, ext/oci8/ocinumber.c,
	  ext/oci8/rowid.c, ext/oci8/ocidatetime.c, ext/oci8/oranumber.c:
	    follow up the change of piecewise operations.
	* lib/oci8/oci8.rb: use OCI8::BindType::Long and
	    OCI8::BindType::LongRaw for LONG and LONG RAW respectively.
